--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ p {
   .nav {
     display: flex;
     flex-direction: column;
+    margin-bottom: auto;
   }
 }
 
@@ -180,12 +181,14 @@ p {
 
 @media screen and (max-width: 767px) {
   .menu-container.is-open {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    padding: 48px 40px;
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 796px;
+    height: 100vh;
     background: #FFFFFF;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   }
@@ -216,12 +219,6 @@ p {
   }
   .header-list :not(:last-child) {
     margin-right: 50px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header-list {
-    margin-top: 48px;
-    margin-left: 40px;
   }
 }
 
@@ -291,8 +288,6 @@ p {
   .header-contacts {
     display: flex;
     flex-direction: column-reverse;
-    margin-left: 40px;
-    margin-top: 302px;
     margin-bottom: 64px;
   }
 }
@@ -389,7 +384,7 @@ p {
 @media screen and (max-width: 767px) {
   .header-social__list {
     display: flex;
-    margin-left: 40px;
+    flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 768px) {
