--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -18,6 +18,7 @@
     @media screen and (max-width:767px) {
       display: flex;
       flex-direction: column;
+      margin-bottom: auto;
     } 
 }
 
@@ -95,12 +96,14 @@
      
     @media screen and (max-width: 767px) {
     &.is-open {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        padding: 48px 40px;
         position: absolute;
         top: 0;
         left: 0;
         width: 100vw;
-        height: 796px; 
+        height: 100vh; 
         // overflow-y: hidden;
         // position: fixed;
         background: #FFFFFF;
@@ -134,11 +137,6 @@
     & :not(:last-child) {
         margin-right: 50px;
     }
-}
-
-@media screen and (max-width:767px) {
-   margin-top: 48px;
-   margin-left: 40px;
 }
 }
 
@@ -227,8 +225,6 @@
     @media screen and (max-width:767px) {
         display: flex;
         flex-direction: column-reverse;
-        margin-left: 40px;
-        margin-top: 302px;
         margin-bottom: 64px;
     }
 
@@ -327,7 +323,7 @@
 .header-social__list {
     @media screen and (max-width:767px) {
         display: flex;
-        margin-left: 40px;
+       flex-wrap: wrap;
     }
 
     @media screen and (min-width:768px) {
